--- a/p8105_hw6_cz2750.Rmd
+++ b/p8105_hw6_cz2750.Rmd
@@ -123,3 +123,81 @@ GLM_plot
 2. Statistical Significance: The fact that many confidence intervals (CIs) cross the OR of 1 suggests that, for a number of cities, the observed differences might not be statistically significant. This could mean that the apparent trend of lower ORs for male victims may not hold strong statistical support in every city.
 
 3. Variability in CIs: The width of the CIs could indicate variability in the sample sizes or data quality across different cities. Wide CIs might imply that the data from those cities is more variable or less certain, while narrow CIs suggest more confidence in the precision of the estimate.
+
+
+# Q2
+## Prepare the data
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2022-01-01",
+    date_max = "2022-12-31") |>
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) |>
+  select(name, id, everything())
+```
+
+## Fit the initial regression model
+```{r}
+initial_model <- lm(tmax ~ tmin + prcp, data = weather_df)
+
+# Function to perform a single bootstrap step
+bootstrap_step <- function(data) {
+  sample_data <- data %>% sample_n(nrow(data), replace = TRUE)
+  model <- lm(tmax ~ tmin + prcp, data = sample_data)
+  
+  # Extracting R-squared
+  r_squared <- glance(model)$r.squared
+  
+  # Extracting coefficients
+  coeffs <- tidy(model)
+  beta1 <- coeffs$estimate[coeffs$term == "tmin"]
+  beta2 <- coeffs$estimate[coeffs$term == "prcp"]
+  
+  # Conditional check to prevent log of non-positive numbers
+  if(beta1 * beta2 <= 0) {
+    log_product <- NA  # Assign NA if product is not positive
+  } else {
+    log_product <- log(beta1 * beta2)
+  }
+  
+  return(data.frame(r_squared = r_squared, log_product = log_product))
+}
+```
+
+## Perform bootstrap sampling
+```{r}
+set.seed(123)  # For reproducibility
+bootstrap_samples <- replicate(5000, bootstrap_step(weather_df), simplify = FALSE) %>% bind_rows()
+```
+
+## Plot distributions
+```{r}
+ggplot(bootstrap_samples, aes(x = r_squared)) +
+  geom_histogram(bins = 30, fill = "blue", alpha = 0.7) +
+  labs(title = "Distribution of R-squared Estimates", x = "R-squared", y = "Frequency")
+
+ggplot(bootstrap_samples, aes(x = log_product)) +
+  geom_histogram(bins = 30, fill = "red", alpha = 0.7) +
+  labs(title = "Distribution of Log Product Estimates", x = "Log Product", y = "Frequency")
+```
+
+## Calculate Confidence Intervals
+```{r}
+r_squared_ci <- quantile(bootstrap_samples$r_squared, c(0.025, 0.975), na.rm = TRUE)
+log_product_ci <- quantile(bootstrap_samples$log_product, c(0.025, 0.975), na.rm = TRUE)
+```
+
+## Displaying the confidence intervals
+```{r}
+r_squared_ci
+log_product_ci
+```
+### Interpretation of the Results:
+95% Confidence Interval of $\hat{r}^2$ :(0.8882079 to 0.9402552)
+
+95% Confidence Interval of $log(\beta_{1} * \beta_{2})$: (-9.063214 to -4.619267)
