--- a/p8105_hw6_cz2750.md
+++ b/p8105_hw6_cz2750.md
@@ -247,3 +247,201 @@ log_product_ci
 
 95% Confidence Interval of $log(\beta_{1} * \beta_{2})$: (-9.063214 to
 -4.619267)
+
+# Q3
+
+## Read data
+
+``` r
+data <- read.csv("birthweight.csv")
+```
+
+## Data Cleaning
+
+``` r
+data <- data %>%
+  mutate(
+    babysex = factor(babysex, levels = c(1, 2), labels = c("Male", "Female")),
+    frace = factor(frace, levels = c(1, 2, 3, 4, 8, 9), labels = c("White", "Black", "Asian", "Puerto Rican", "Other", "Unknown")),
+    malform = factor(malform, levels = c(0, 1), labels = c("Absent", "Present")),
+    mrace = factor(mrace, levels = c(1, 2, 3, 4, 8), labels = c("White", "Black", "Asian", "Puerto Rican", "Other"))
+  )
+
+# Check for missing values
+summary(data)
+```
+
+    ##    babysex         bhead          blength           bwt           delwt      
+    ##  Male  :2230   Min.   :21.00   Min.   :20.00   Min.   : 595   Min.   : 86.0  
+    ##  Female:2112   1st Qu.:33.00   1st Qu.:48.00   1st Qu.:2807   1st Qu.:131.0  
+    ##                Median :34.00   Median :50.00   Median :3132   Median :143.0  
+    ##                Mean   :33.65   Mean   :49.75   Mean   :3114   Mean   :145.6  
+    ##                3rd Qu.:35.00   3rd Qu.:51.00   3rd Qu.:3459   3rd Qu.:157.0  
+    ##                Max.   :41.00   Max.   :63.00   Max.   :4791   Max.   :334.0  
+    ##     fincome               frace         gaweeks         malform    
+    ##  Min.   : 0.00   White       :2123   Min.   :17.70   Absent :4327  
+    ##  1st Qu.:25.00   Black       :1911   1st Qu.:38.30   Present:  15  
+    ##  Median :35.00   Asian       :  46   Median :39.90                 
+    ##  Mean   :44.11   Puerto Rican: 248   Mean   :39.43                 
+    ##  3rd Qu.:65.00   Other       :  14   3rd Qu.:41.10                 
+    ##  Max.   :96.00   Unknown     :   0   Max.   :51.30                 
+    ##     menarche        mheight          momage              mrace     
+    ##  Min.   : 0.00   Min.   :48.00   Min.   :12.0   White       :2147  
+    ##  1st Qu.:12.00   1st Qu.:62.00   1st Qu.:18.0   Black       :1909  
+    ##  Median :12.00   Median :63.00   Median :20.0   Asian       :  43  
+    ##  Mean   :12.51   Mean   :63.49   Mean   :20.3   Puerto Rican: 243  
+    ##  3rd Qu.:13.00   3rd Qu.:65.00   3rd Qu.:22.0   Other       :   0  
+    ##  Max.   :19.00   Max.   :77.00   Max.   :44.0                      
+    ##      parity            pnumlbw     pnumsga      ppbmi            ppwt      
+    ##  Min.   :0.000000   Min.   :0   Min.   :0   Min.   :13.07   Min.   : 70.0  
+    ##  1st Qu.:0.000000   1st Qu.:0   1st Qu.:0   1st Qu.:19.53   1st Qu.:110.0  
+    ##  Median :0.000000   Median :0   Median :0   Median :21.03   Median :120.0  
+    ##  Mean   :0.002303   Mean   :0   Mean   :0   Mean   :21.57   Mean   :123.5  
+    ##  3rd Qu.:0.000000   3rd Qu.:0   3rd Qu.:0   3rd Qu.:22.91   3rd Qu.:134.0  
+    ##  Max.   :6.000000   Max.   :0   Max.   :0   Max.   :46.10   Max.   :287.0  
+    ##      smoken           wtgain      
+    ##  Min.   : 0.000   Min.   :-46.00  
+    ##  1st Qu.: 0.000   1st Qu.: 15.00  
+    ##  Median : 0.000   Median : 22.00  
+    ##  Mean   : 4.145   Mean   : 22.08  
+    ##  3rd Qu.: 5.000   3rd Qu.: 28.00  
+    ##  Max.   :60.000   Max.   : 89.00
+
+There is no missing data. The 20 variables include: babysex, bhead,
+blength, bwt, delwt, fincome, frace, gaweeks, malform, menarche,
+mheight, momage, mrace, parity, pnumlbw, pnumsga, ppbmi, ppwt, smoken,
+wtgain.
+
+## Regression Model Proposal
+
+``` r
+model_birthweight <- lm(bwt ~ mrace + frace + momage + gaweeks, data = data)
+
+summary(model_birthweight) %>% 
+  tidy() %>%
+  select(term, estimate, p.value)
+```
+
+    ## # A tibble: 10 × 3
+    ##    term              estimate   p.value
+    ##    <chr>                <dbl>     <dbl>
+    ##  1 (Intercept)         827.   1.25e- 17
+    ##  2 mraceBlack         -196.   1.03e-  2
+    ##  3 mraceAsian         -132.   2.69e-  1
+    ##  4 mracePuerto Rican  -138.   6.42e-  2
+    ##  5 fraceBlack          -43.6  5.68e-  1
+    ##  6 fraceAsian            5.18 9.64e-  1
+    ##  7 fracePuerto Rican   -17.0  8.19e-  1
+    ##  8 fraceOther          -35.6  7.72e-  1
+    ##  9 momage                2.19 2.51e-  1
+    ## 10 gaweeks              59.8  4.30e-148
+
+``` r
+summary(model_birthweight) %>% 
+  glance()
+```
+
+    ## # A tibble: 1 × 8
+    ##   r.squared adj.r.squared sigma statistic   p.value    df df.residual  nobs
+    ##       <dbl>         <dbl> <dbl>     <dbl>     <dbl> <dbl>       <int> <dbl>
+    ## 1     0.222         0.220  452.      137. 3.71e-228     9        4332  4342
+
+Model Fit: The model accounts for about 22.17% of the variance in birth
+weight. This suggests that while the included factors do have some
+relationship with birth weight, there are still many other unaccounted
+factors.
+
+Significant Predictors: The gestational age is a highly significant
+predictor, indicating that as gestational age increases, the birth
+weight also increases significantly (about 59.80 grams per week).
+Additionally, being born to Black mothers is associated with a
+significant decrease in birth weight compared to White mothers.
+
+Non-significant Predictors: The mother’s age and the father’s race,
+along with other races of the mother, did not show a statistically
+significant impact on birth weight in this model.
+
+Model Adequacy: The F-statistic is significant, which indicates that the
+model is statistically significant overall. However, the relatively low
+R-squared value implies that other factors not included in the model
+might influence birth weight.
+
+## Residuals Plot
+
+``` r
+data_with_preds <- data %>%
+  add_predictions(model_birthweight) %>%
+  add_residuals(model_birthweight)
+
+# Plot the residuals against fitted values
+ggplot(data_with_preds, aes(x = pred, y = resid)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(title = "Residuals vs. Fitted Plot", x = "Fitted values", y = "Residuals")
+```
+
+<img src="p8105_hw6_cz2750_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+The “Residuals vs. Fit Plot” for the birth weight model shows that the
+residuals are mostly randomly dispersed around the zero point of the
+horizontal line, which is consistent with the assumptions of
+homoscedasticity and linearity. There was no clear pattern indicating
+the presence of nonlinearity or heteroscedasticity.
+
+## Model Comparison
+
+``` r
+# Define the models for comparison
+set.seed(77)
+
+cv_dataset <-
+  data %>% 
+  crossv_mc(n = 100,test = 0.2)
+  
+
+cv_df <- 
+  cv_dataset %>%
+   mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+
+cv_df <-
+  cv_df %>%
+    mutate(
+    my_model  = map(train, ~lm(bwt ~ mrace + frace + momage + gaweeks, data = .x)),
+    model_frace_gaweeks = map(train, ~lm(bwt ~ frace + gaweeks, data = .x)),
+    model_interactions  = map(train, ~lm(bwt ~ (mrace + momage + gaweeks)^3, data = .x))
+    ) %>%
+   mutate(
+    rmse_my_model = map2_dbl(my_model, test, ~rmse(model = .x, data = .y)),
+    rmse_frace_gaweeks = map2_dbl(model_frace_gaweeks, test, ~rmse(model = .x, data = .y)),
+    rmse_interactions = map2_dbl(model_interactions, test, ~rmse(model = .x, data = .y))
+   )
+```
+
+## Reporting
+
+``` r
+cv_df %>% 
+  select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>% 
+  mutate(model = fct_inorder(model)) %>% 
+  ggplot(aes(x = model, y = rmse)) + 
+  geom_boxplot() +
+  labs(title = 
+  "Prediction Error Distributions across Models", 
+       x = "Models", y = "Root Mean Square Error")  +
+  scale_x_discrete(
+    labels = c("My Model", "Father’s race + Gestational age in weeks ", "Interactions Model")) +
+  theme(plot.title = element_text(hjust = 0.5, face = "bold"))
+```
+
+<img src="p8105_hw6_cz2750_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
+
+What we are comparing here is the cross-validation prediction error of
+the models. Overall, my model seems to have the lowest prediction error
+(rmse) and therefore is probably the best model .
